...
        }}
      >
        {(formik) => (
          <>
            <ScrollView
              contentContainerStyle={styles.content}
              testID="add-event-scroll"
            >
              <KeyboardAvoidingView
                behavior={Platform.OS === "ios" ? "padding" : "height"}
                style={{ flex: 1 }}
              >
                <CardSurface
...
                    {t("agenda.title_placeholder")}
                  </Text>
                  <TextInput
                    placeholder={t("agenda.title_placeholder")}
                    value={formik.values.event_name}
                    onChangeText={formik.handleChange("event_name")}
                    testID="add-event-title"
                  />
                  <Divider style={{ marginHorizontal: 8 }} />
                  <TouchableOpacity
                    onPress={() => setShowSelectReptile(true)}
                    testID="add-event-select-reptile"
                  >
...
                  loading={isPending}
                  disabled={!formik.isValid}
                  icon={"plus"}
                  onPress={formik.submitForm}
                  mode="contained"
                  style={styles.primaryButton}
                  testID="add-event-submit"
                >
                  {t("agenda.add_event")}
                </Button>
                <TimePicker
                  showPicker={showPicker}
                  setShowPicker={setShowPicker}
...
