...
            <TouchableRipple
              style={[
                styles.quickAction,
                { backgroundColor: colors.secondaryContainer },
              ]}
              onPress={() => navigate(ScreenNames.ADD_EVENT)}
              testID="home-quick-add-event"
            >
              <View style={styles.quickActionContent}>
                <Icon source="calendar" size={18} color={colors.secondary} />
                <Text
                  variant="labelSmall"
                  style={[styles.quickActionText, { color: colors.secondary }]}
...
