...
          margin: 16,
          right: 0,
          bottom: 0,
        }}
        icon="plus"
        onPress={() => navigate(ScreenNames.ADD_FEED)}
        testID="feed-add"
      />
    </Screen>
  );
};

export default Feed;
...
