...
          theme={{ colors: { primaryContainer: colors.primary } }}
          variant="primary"
          color="#fff"
          icon="plus"
          style={styles.fab}
          onPress={() => navigate(ScreenNames.ADD_REPTILE)}
          testID="reptiles-add"
        />
      </Portal.Host>
    </Screen>
  );
};

...
